baseline-aligned fieldset flex item should derive baseline from its main content area, not from its legend
Categories
(Core :: Layout: Flexbox, defect)
Tracking
()
People
(Reporter: dholbert, Assigned: TYLin)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
STR:
- Load this testcase:
data:text/html,<!DOCTYPE html>
<div style="display:flex; align-items:baseline;border:1px solid black">
<div>abc</div><fieldset><legend>Legend</legend>F1<br>F2
EXPECTED RESULTS:
"abc" should be baseline-aligned with "F1" (i.e. the fieldset's body)
ACTUAL RESULTS:
"abc" is basleine-aligned with the fieldset's legend instead.
Chrome gives EXPECTED RESULTS.
Firefox and Epiphany (Powered by WebKitGTK 2.38.5) give ACTUAL RESULTS.
This is the reason we fail several interop-2023-relevant WPT tests:
https://wpt.fyi/results/css/css-flexbox/fieldset-baseline-alignment.html
https://wpt.fyi/results/css/css-flexbox/alignment/flex-align-baseline-fieldset-001.html
https://wpt.fyi/results/css/css-flexbox/alignment/flex-align-baseline-fieldset-002.html
https://wpt.fyi/results/css/css-flexbox/alignment/flex-align-baseline-fieldset-003.html
| Assignee | ||
Comment 1•3 years ago
|
||
This patch is to reflect the CSSWG resolution in
https://github.com/w3c/csswg-drafts/issues/7656#issuecomment-1248617134
| Assignee | ||
Updated•3 years ago
|
Comment 3•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Reproducible on a 2023-03-14 Nightly build on macOS 12.
Verified as fixed on Firefox 113.0(build ID: 20230501151611) and Nightly 114.0a1(build ID: 20230502160708) on macOS 12, Windows 10, Ubuntu 22.
Description
•