Bug 1821559 - Get fieldset's baseline from fieldset content, not from legend. r=dshin

This patch is to reflect the CSSWG resolution in
https://github.com/w3c/csswg-drafts/issues/7656#issuecomment-1248617134

Differential Revision: https://phabricator.services.mozilla.com/D172529